--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,15 +32,15 @@
   }
   
   .login--img {
-    width: 50%;
+    width: 30%;
     background-image: url('../storage/img/fondo-login-2.webp'); 
     background-size: cover;
     background-position: center;
   }
   
   .login--info {
-    width: 50%;
-    padding: 40px;
+    width: 70%;
+    padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -49,9 +49,7 @@
   }
   
   .login--nav {
-    position: absolute;
-    top: 20px;
-    right: 40px;
+    position: relative;
     display: flex;
     gap: 30px;
   }
