feat: :hammer: Fixing JS

--- a/user-mainPage/style/styles.css
+++ b/user-mainPage/style/styles.css
@@ -119,3 +119,9 @@ button{
   transition: transform 0.3s ease-in-out;
   cursor: pointer;
 }
+
+.disabled-link button {
+    opacity: 0.5;
+    pointer-events: none;
+    cursor: not-allowed;
+}
