feat: :lipstick: Adding style, UI and remove space from storage

--- a/user-avatar/css/style2.css
+++ b/user-avatar/css/style2.css
@@ -15,7 +15,7 @@
 
 
 body {
- background: url('../Frame\ 17.svg');
+ background: url('../Frame17.svg');
  color: #00fff7;
  overflow-x: hidden;
  overflow-y: hidden;
