--- a/user-vehiculos/style/style.css
+++ b/user-vehiculos/style/style.css
@@ -15,7 +15,7 @@
 
 
 body {
- background: url('../Frame\ 17.svg');
+ background: url('../Frame17.svg');
  color: #00fff7;
  overflow-x: hidden;
  overflow-y: hidden;
